Improved Layout of Delete-views and Details-views

--- a/Sjuklöner/Views/Account/DeleteOmbud.cshtml
+++ b/Sjuklöner/Views/Account/DeleteOmbud.cshtml
@@ -7,7 +7,7 @@
 <div class="row index-page-margin">
     <p class="col col-md-2"></p>
     <p class="page-header8 col col-md-10">Ta bort ombudet</p>
-    <nl class="col-small-left-padding col col-md-offset-2 font-size-16">Klicka på "Bekräfta" nedan för att ta bort denna handläggare</nl>
+    <nl class="col-small-left-padding col col-md-offset-2 font-size-16">Klicka på "Bekräfta" nedan för att ta bort detta ombud</nl>
 </div>
 <hr class="claim-divider" />
 
