Adjusted filneames för attachments. Started working on logic for admin to allow automatic transfer of claim to Procapita.

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -623,6 +623,13 @@ li a {
     padding: 6px 6px;
 }
 
+.btn-primary-configuration {
+    margin-left: 0;
+    font-size: 14px;
+    width: 130px;
+    padding: 0 0;
+}
+
 .btn-primary-wide {
     margin-left: 18px;
     font-size: 22px;
