--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -63,51 +63,51 @@
                             <th class="medium-col">
                                 Yrkat belopp (Kr)
                             </th>*@
-                            <th class="small-col"></th>
+                        <th class="small-col"></th>
                     </tr>
 
                     @foreach (var item in Model.InInboxClaims)
                     {
-                    <tr>
-                        <td>
-                            @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CompanyName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.AdmOffName)
-                        </td>
-                        @*<td>
-                @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerSSN)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QualifyingDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ClaimedSum)
-            </td>*@
-             <td>
-            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
-        </td>
-            @*<td>
-                    @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
-                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                </td>*@
-                    </tr>
+                        <tr>
+                            <td>
+                                @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CompanyName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.AdmOffName)
+                            </td>
+                            @*<td>
+                                    @Html.DisplayFor(modelItem => item.RegAssistantSSN)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CustomerSSN)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.QualifyingDate)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ClaimedSum)
+                                </td>*@
+                            <td>
+                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
+                            </td>
+                            @*<td>
+                                    @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
+                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+                                </td>*@
+                        </tr>
                     }
 
                 </table>
@@ -157,8 +157,8 @@
                             Sista sjukdag
                         </th>
                         @*<th class="small-col">
-                            Antal sjukdagar
-                        </th>*@
+                                Antal sjukdagar
+                            </th>*@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
@@ -193,8 +193,8 @@
                                 @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
                             </td>
                             @*<td>
-                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>*@
+                                    @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                                </td>*@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
@@ -256,8 +256,8 @@
                             Sista sjukdag
                         </th>
                         @*<th class="small-col">
-                            Antal sjukdagar
-                        </th>*@
+                                Antal sjukdagar
+                            </th>*@
                         <th class="medium-col">
                             Yrkat belopp (Kr)
                         </th>
@@ -298,8 +298,8 @@
                                 @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
                             </td>
                             @*<td>
-                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                            </td>*@
+                                    @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                                </td>*@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
@@ -333,6 +333,12 @@
     </div>
 
     <hr class="claim-divider" />
+
+    <div class="row row-padding2">
+        <div class="col-left-margin-6 col col-md-2">
+            @Html.ActionLink("Tillbaka", "Index", "Home", null, new { @class = "btn btn-primary btn-primary-small" })
+        </div>
+    </div>
 
 </body>
 
