--- a/Sjuklöner/Views/CareCompanies/Index.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Index.cshtml
@@ -95,6 +95,12 @@ else
                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
             </td>
             }
+            else
+            {
+            <td>
+                @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
+            </td>
+            }
         </tr>
     }
 </table>
