Aligning navbar with font text

--- a/Sjuklöner/Content/bootstrap.css
+++ b/Sjuklöner/Content/bootstrap.css
@@ -4124,7 +4124,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
   .navbar-collapse.collapse {
     display: block !important;
-    height: auto !important;
+    height: 70px;
     padding-bottom: 0;
     overflow: visible !important;
   }
