Hide button 'För över till ProCapita' if claim is already transferred to ProCapita

--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -379,7 +379,7 @@
     
     <div class="row">
         <div class="col col-md-offset-4">
-        @if (User.IsInRole("AdministrativeOfficial"))
+        @if (User.IsInRole("AdministrativeOfficial") && Model.InInbox == true)
         {
             @Html.ActionLink("För över till Procapita", "Transfer", new { refNumber = Model.ClaimNumber }, new { @class = "btn btn-primary btn-primary-wide2" })
         }
